@@ -1,3 +1,6 @@
+2005-05-17 TADA Tadashi <sho@spc.gr.jp>
+	* tdiary.rb: fix typo by supporting ruby 1.9 HEAD.
+
 2005-05-16  Kazuhiko  <kazuhiko@fdiary.net>
 	* tdiary.rb: support ruby 1.9 HEAD.
 
